SERVER-44127 abort ops that encounter a catalog conflict after already locking in a read snapshot